--- a/FcuCore.Web/wwwroot/css/site.css
+++ b/FcuCore.Web/wwwroot/css/site.css
@@ -45,9 +45,9 @@ body {
 
 
 div.features {
-    color: red;
+    color: #dee2e6;
 }
 
 div.features .module-feature {
-    color: green;
+    color: #046b04;
 }
