--- a/FcuCore.Web/Views/Home/Index.cshtml
+++ b/FcuCore.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <!-- ko foreach: modules.list-->
 
-<div>
+<div class="cbus-module">
     <span data-bind="text: CanId"></span>/<span data-bind="text: Definition.Name"></span>
     <div class="features">
         <i class="fa fa-sign-out" data-bind="css: { 'module-feature': IsProducerNode}"></i>
