--- a/FcuCore.Web/Views/Dialogs/ConfigureComms.cshtml
+++ b/FcuCore.Web/Views/Dialogs/ConfigureComms.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal" tabindex="-1" role="dialog" id="dialog-configure-comms">
+﻿<div class="modal" tabindex="-1" role="dialog" id="dialog-configure-comms" data-backdrop="static">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
