--- a/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
+++ b/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
@@ -38,6 +38,7 @@
 
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-bind="click: readNodeVariables">Read NVs</button>
                 <button type="button" class="btn btn-secondary" data-bind="click: closeEditNodeVariables">Close</button>
             </div>
         </div>
