--- a/FcuCore.Web/Views/Home/Index.cshtml
+++ b/FcuCore.Web/Views/Home/Index.cshtml
@@ -15,6 +15,10 @@
             <span data-bind="text: canId"></span>
         </div>
         <div class="node-info">
+            <span>Version</span>
+            <span data-bind="text: version"></span>
+        </div>
+        <div class="node-info">
             <span>Type</span>
             <span data-bind="text: nodeType.name"></span>
         </div>
