--- a/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
+++ b/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
@@ -16,6 +16,10 @@
                         <span data-bind="text: canId"></span>
                     </div>
                     <div class="node-info">
+                        <span>Version</span>
+                        <span data-bind="text: version"></span>
+                    </div>
+                    <div class="node-info">
                         <span>Type</span>
                         <span data-bind="text: nodeType.name"></span>
                     </div>
