--- a/FcuCore.Web/Views/Home/Index.cshtml
+++ b/FcuCore.Web/Views/Home/Index.cshtml
@@ -2,39 +2,5 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!-- ko foreach: modules.list-->
-
-<div class="node">
-    <div class="node-header">
-        <div class="node-info">
-            <span>Node Number</span>
-            <span data-bind="text: nodeNumber"></span>
-        </div>
-        <div class="node-info">
-            <span>CAN ID</span>
-            <span data-bind="text: canId"></span>
-        </div>
-        <div class="node-info">
-            <span>Version</span>
-            <span data-bind="text: version"></span>
-        </div>
-        <div class="node-info">
-            <span>Type</span>
-            <span data-bind="text: nodeType.name"></span>
-        </div>
-
-        <div class="features">
-            <i class="fa fa-sign-out" data-bind="css: { 'module-feature': isProducerNode}"></i>
-            <i class="fa fa-sign-in" data-bind="css: { 'module-feature': isConsumerNode}"></i>
-            <i class="fa fa-cogs" data-bind="css: {'module-feature' : inFlimMode}"></i>
-            <i class="fa fa-upload" data-bind="css: {'module-feature' : supportsBootloader}"></i>
-        </div>
-    </div>
-
-    <button type="button" class="btn btn-sm btn-secondary" data-bind="click: editNodeVariables">Node Variables</button>
-
-</div>
-
-<!-- /ko -->
-
+<partial name="/Views/Components/NodeTable.cshtml" />
 
