--- a/FcuCore.Web/wwwroot/css/site.css
+++ b/FcuCore.Web/wwwroot/css/site.css
@@ -39,37 +39,56 @@ body {
     margin-bottom: 0px;
 }
 
+.debug-view-opcode {
+    font-family: monospace;
+    display: inline-block;
+    width: 90px;
+}
+.debug-view-transport {
+    font-family: monospace;
+}
+.debug-view-display {
+    display: block;
+}
+
+
 .dropdown-item i.fa {
     margin-left: -1.3rem;
 }
 
-
-div.features {
-    color: #dee2e6;
-}
-
-div.features .module-feature {
-    color: #046b04;
-}
-
-div.node {
-    border: 1px solid #dee2e6;
-    border-radius: 5px;
-    margin: 15px;
-    padding: 15px;
-}
-
-div.node div.node-header {
+div.node-header {
     position: relative;
 }
 
-div.node div.features {
-    position: absolute;
-    top: 15px;
-    right: 15px;
+table.node-table {
+    width: 100%;
+}
+table.node-table thead th.info-cell {
+    font-variant: small-caps;
+    font-size: 11px;
+    color: #a0a0a0;
+    font-weight: bold;
+}
+table.node-table thead th:last-child {
+    text-align: right;
+}
+table.node-table tr .info-cell {
+    width: 120px;
+}
+table.node-table tr td:last-child {
+    width: 80px;
 }
 
-div.node-header div.node-info {
+
+div.node-features {
+    color: #dee2e6;
+}
+
+div.node-features .module-feature {
+    color: #046b04;
+}
+
+div.node-header div.node-info, div.node-header div.node-actions {
     display: inline-block;
 }
 
