--- a/FcuCore.Web/Views/Shared/_Layout.cshtml
+++ b/FcuCore.Web/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
     <script src="~/js/ko-number.js" asp-append-version="true"></script>
     <script src="~/js/cbusCore.js" asp-append-version="true"></script>
     <script src="~/js/cbusModules.js" asp-append-version="true"></script>
+    <script src="~/js/modules/unknown.js" asp-append-version="true"></script>
     <script src="~/js/modules/canacc4.js" asp-append-version="true"></script>
     <script src="~/js/modules/canace8c.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
