--- a/FcuCore.Web/Views/Dialogs/ConfigureComms.cshtml
+++ b/FcuCore.Web/Views/Dialogs/ConfigureComms.cshtml
@@ -5,13 +5,17 @@
                 <h5 class="modal-title">Comms Configuration</h5>
             </div>
             <div class="modal-body">
-                <p>
-                    <label><input type="radio" name="comms-transport" value="Serial" data-bind="checked: comms.transport" />Serial</label>
-                    <label><input type="radio" name="comms-transport" value="Test" data-bind="checked: comms.transport"/>Test</label>
-                </p>
-                <p>
-                    <label>Serial Port<input data-bind="value: comms.serialPort"/></label>
-                </p>
+                <div class="form-check">
+                    <input type="radio" class="form-check-input" name="comms-transport" value="Serial" data-bind="checked: comms.transport" id="dialog-configure-comms-radio-serial" />
+                    <label for="dialog-configure-comms-radio-serial" class="form-check-label">Serial Port</label>
+                    
+                </div>
+                <div class="form-group">
+                    <input class="form-control" data-bind="value: comms.serialPort, enable: comms.transport() === 'Serial'" />
+                </div>
+                <hr />
+                
+                <label><input type="radio" name="comms-transport" value="Test" data-bind="checked: comms.transport"/> Test</label>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bind="click: comms.closeConfigure">Close</button>
