--- a/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
+++ b/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="modal" tabindex="-1" role="dialog" id="dialog-edit-node-variables" data-backdrop="static">
     <!-- ko with: modules.currentNode -->
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Edit Node Variables</h5>
@@ -26,37 +26,48 @@
                 </div>
                 
                 <ul class="nav nav-tabs" role="tablist">
-                    <!-- ko foreach: nodeType.configGroups -->
+                    <!-- ko foreach: nodeType.configTabs -->
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" data-bind="attr:{href:'#dialog-edit-nv-tab-'+name.replace(/[^a-z]/gi, '_')}, text: name, css: {'active': $index() === 0}"></a>
                     </li>
                     <!--/ko-->
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#raw-nvs" data-bind="css: {'active': nodeType.configGroups.length === 0}">Raw NVs</a>
+                        <a class="nav-link" data-toggle="tab" href="#raw-nvs" data-bind="css: {'active': nodeType.configTabs.length === 0}">Raw NVs</a>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <!-- ko foreach: nodeType.configGroups -->
+                    <!-- ko foreach: nodeType.configTabs -->
                     <div class="tab-pane fade" data-bind="attr:{id:'dialog-edit-nv-tab-'+name.replace(/[^a-z]/gi, '_')}, css: {'show active': $index() === 0}">
                         <div class="config-group">
-                            <!-- ko foreach: $parent.getValuesInGroup($data) -->
-                            <div>
-                                <span class="node-variable-index" data-bind="text: nv.index"></span>
-                                <!-- ko template: {name: 'nodevariable-tmpl-' + definition().type, data: $data} -->
+                            <!-- ko foreach: items -->
+                                <!-- ko if: $data.group -->
+                                <div class="config-subgroup">
+                                    <h6 data-bind="text: group"></h6>
+                                    <!-- ko foreach: items -->
+                                    <div>
+                                        <!-- ko template: {name: 'nodevariable-tmpl-' + type, data: {definition: $data, value: $parents[2].nodeVariables().find((i) => i.index === nv).value}} -->
+                                        <!-- /ko -->
+                                    </div>
+                                    <!-- /ko -->
+                                </div>
                                 <!-- /ko -->
-
-                            </div>
+                                <!-- ko if: $data.name -->
+                                    <div class="config-item">
+                                        <!-- ko template: {name: 'nodevariable-tmpl-' + type, data: {definition: $data, value: $parents[1].nodeVariables().find((i) => i.index === nv).value}} -->
+                                        <!-- /ko -->
+                                    </div>
+                                <!-- /ko -->
                             <!-- /ko -->
                         </div>
                     </div>
                     <!-- /ko -->
-                    <div class="tab-pane fade" id="raw-nvs" data-bind="css: {'show active': nodeType.configGroups.length === 0}">
+                    <div class="tab-pane fade" id="raw-nvs" data-bind="css: {'show active': nodeType.configTabs.length === 0}">
                         <div class="config-group">
                             <!-- ko foreach: nodeVariables -->
-                            <div>
+                            <div class="config-item form-group">
                                 <label>
-                                    <input type="number" data-bind="number: value" min="0" max="255">
                                     <span data-bind="text: 'NV ' + index"></span>
+                                    <input type="form-control" type="number" data-bind="number: value" min="0" max="255">
                                 </label>
                             </div>
                             <!-- /ko -->
@@ -76,10 +87,12 @@
 
 
 <script type="text/html" id="nodevariable-tmpl-numeric">
-    <label>
-        <input type="number" data-bind="number: value" min="0" max="255">
-        <span data-bind="text: definition().name"></span>
-    </label>
+    <div class="form-group">
+        <label>
+            <span data-bind="text: definition.name"></span>
+            <input class="form-control" type="number" data-bind="number: value" min="0" max="255">
+        </label>
+    </div>
 </script>
 
 <script type="text/html" id="nodevariable-tmpl-bitfield">
@@ -91,17 +104,26 @@
     <input type="checkbox" data-bind="bitmask: value, bit: 4" />
     <input type="checkbox" data-bind="bitmask: value, bit: 2" />
     <input type="checkbox" data-bind="bitmask: value, bit: 1" />
-    <span data-bind="text: definition().name"></span>
+    <span data-bind="text: definition.name"></span>
 </script>
 
 <script type="text/html" id="nodevariable-tmpl-select">
     <select data-bind="value: value, options: definition().selectValues, optionsText: 'name', optionsValue: 'value'"></select>
-    <span data-bind="text: definition().name"></span>
+    <span data-bind="text: definition.name"></span>
+</script>
+
+<script type="text/html" id="nodevariable-tmpl-flag">
+    <div class="form-check">
+        <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" data-bind="bitmask: value, bit: definition.flagValue">
+            <span data-bind="text: definition.name"></span>
+        </label>
+    </div>
 </script>
 
 <script type="text/html" id="nodevariable-tmpl-flags">
-    <!-- ko foreach: definition().flagValues -->
+    <!-- ko foreach: definition.flagValues -->
     <label><input type="checkbox" data-bind="bitmask: $parent.value, bit: value"><span data-bind="text: name"></span></label>
     <!-- /ko -->
-    <span data-bind="text: definition().name"></span>
+    <span data-bind="text: definition.name"></span>
 </script>
