--- a/FcuCore.Web/wwwroot/css/site.css
+++ b/FcuCore.Web/wwwroot/css/site.css
@@ -102,9 +102,28 @@ div.node-header div.node-info span:first-child {
 div.config-group {
     margin-top: 10px;
     font-size: 13px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 div.config-group h3 {
+    font-size: 13px;
+}
+div.config-item {
+    width: 100%;
+}
+div.config-subgroup {
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+div.config-subgroup h6 {
+    background-color: #fff;
+    margin-top: -20px;
+    position: absolute;
+    padding: 0px 10px;
     font-size: 13px;
 }
 
