--- a/FcuCore.Web/Views/Shared/_Layout.cshtml
+++ b/FcuCore.Web/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
     <script src="~/js/modules/unknown.js" asp-append-version="true"></script>
     <script src="~/js/modules/canacc4.js" asp-append-version="true"></script>
     <script src="~/js/modules/canace8c.js" asp-append-version="true"></script>
+    <script src="~/js/modules/canmio.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </environment>
 <environment exclude="Development">
