--- a/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
+++ b/FcuCore.Web/Views/Dialogs/EditNodeVariables.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="modal" tabindex="-1" role="dialog" id="dialog-edit-node-variables" data-backdrop="static">
     <!-- ko with: modules.currentNode -->
-    <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Edit Node Variables</h5>
@@ -40,26 +40,7 @@
                     <div class="tab-pane fade" data-bind="attr:{id:'dialog-edit-nv-tab-'+name.replace(/[^a-z]/gi, '_')}, css: {'show active': $index() === 0}">
                         <div class="config-group">
                             <!-- ko foreach: items -->
-                            <!-- ko if: (typeof visible === "function" && visible($parents[1])) || typeof visible !== "function" -->
-                                <!-- ko if: $data.group -->
-                            <div class="config-subgroup">
-                                <h6 data-bind="text: group"></h6>
-                                <!-- ko foreach: items -->
-                                <!-- ko if: (typeof visible === "function" && visible($parents[2])) || typeof visible !== "function" -->
-                                <div>
-                                    <!-- ko template: {name: 'nodevariable-tmpl-' + type, data: {definition: $data, value: $parents[2].nodeVariables().find((i) => i.index === nv).value}} -->
-                                    <!-- /ko -->
-                                </div>
-                                <!-- /ko -->
-                                <!-- /ko -->
-                            </div>
-                                <!-- /ko -->
-                                <!-- ko if: $data.name -->
-                                    <div class="config-item">
-                                        <!-- ko template: {name: 'nodevariable-tmpl-' + type, data: {definition: $data, value: $parents[1].nodeVariables().find((i) => i.index === nv).value}} -->
-                                        <!-- /ko -->
-                                    </div>
-                                <!-- /ko -->
+                            <!-- ko template: {name: 'nodevariable-tmpl-item', data: {node: $parents[1], data: $data} } -->
                             <!-- /ko -->
                             <!-- /ko -->
                         </div>
@@ -89,6 +70,30 @@
     <!-- /ko -->
 </div>
 
+<script type="text/html" id="nodevariable-tmpl-item">
+    <!-- ko if: (typeof data.visible === "function" && data.visible(node)) || typeof data.visible !== "function" -->
+    <!-- ko if: data.group -->
+    <div class="config-subgroup">
+    <h6 data-bind="text: data.group"></h6>
+    
+        <!-- ko foreach: data.items -->
+        
+        <!-- ko template: {name: 'nodevariable-tmpl-item', data: {node: $parent.node, data: $data} } -->
+        <!-- /ko -->
+
+        <!-- /ko -->
+    
+    </div>
+    <!-- /ko -->
+    <!-- ko if: data.name -->
+    <div class="config-item">
+        
+        <!-- ko template: {name: 'nodevariable-tmpl-' + data.type, data: {definition: data, value: node.getNV(data.nv).value}} -->
+        <!-- /ko -->
+    </div>
+    <!-- /ko -->
+    <!-- /ko -->
+</script>
 
 <script type="text/html" id="nodevariable-tmpl-numeric">
     <div class="form-group">
