--- a/FcuCore.Web/wwwroot/css/site.css
+++ b/FcuCore.Web/wwwroot/css/site.css
@@ -63,22 +63,57 @@ div.node-header {
 table.node-table {
     width: 100%;
 }
-table.node-table thead th.info-cell {
-    font-variant: small-caps;
-    font-size: 11px;
-    color: #a0a0a0;
-    font-weight: bold;
+table.node-table thead tr {
+    display: block;
 }
+    table.node-table thead th.info-cell {
+        font-variant: small-caps;
+        font-size: 11px;
+        color: #a0a0a0;
+        font-weight: bold;
+    }
 table.node-table thead th:last-child {
     text-align: right;
 }
 table.node-table tr .info-cell {
-    width: 120px;
+    max-width: 150px;
+    min-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 table.node-table tr td:last-child {
     width: 80px;
 }
 
+
+
+table.node-table tbody {
+    max-height: 400px;
+    overflow-y: scroll;
+    display: block;
+    width: 100%;
+}
+
+table.node-table tbody tr:nth-child(even) {
+    background-color: #dfdfdf;
+}
+table.node-table tbody tr:nth-child(odd) {
+    background-color: #c8c7c7;
+}
+table.node-table tbody tr:hover {
+    outline: 1px solid #faffab;
+    cursor: pointer;
+}
+table.node-table tbody tr.selected {
+    background-color: #faffab;
+}
+table.node-table tbody tr td > i {
+    visibility: hidden;
+}
+table.node-table tbody tr td:hover > i {
+    visibility: visible;
+}
 
 div.node-features {
     color: #dee2e6;
@@ -163,3 +198,92 @@ span.node-variable-index {
     display: inline-block;
 }
 
+
+
+
+
+.event, .node {
+    border: 2px solid;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    width:180px;
+    box-shadow: 2px 2px 3px 0px #000;
+    cursor: pointer;
+  
+}
+
+.event div:first-child, .node div:first-child {
+    font-size: 11px;
+    font-variant: small-caps;
+    line-height: 11px;
+    border-bottom: 1px solid;
+    padding-left: 3px;
+}
+
+.event div:last-child, .node div:last-child {
+    font-size: 13px;
+    line-height: 13px;
+    padding: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.event.long-event, .event.long-event div:first-child {
+    border-color: #848cad;
+}
+
+.event.short-event, .event.short-event div:first-child {
+    border-color: #7aa395;
+}
+
+.node:hover div:first-child {
+    background-color: #2d9aa5;
+    color: black;
+}
+
+.node:active  {
+    box-shadow: none;
+    margin: 3px 0px 0px 3px;
+}
+
+.node, .node div:first-child {
+    border-color: #2d9aa5;
+}
+.node.empty-node {
+    height: 35px;
+    border-style: dotted;
+    box-shadow: none;
+    background-color: inherit;
+    text-align: center;
+    font-size: 13px;
+    color: #000;
+    line-height: 35px;
+}
+
+.selectable-node {
+    position: relative;
+}
+
+.node-selector {
+    position: absolute;
+    width: 185px;
+    z-index: 100;
+    background-color: #a1a4a7;
+    border: 2px solid #a1a4a7;
+    border-radius: 5px;
+    top: 0px;
+    left: 180px;
+    display: none;
+}
+
+.node-selector div.left-arrow {
+    width: 0; 
+    height: 0; 
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent; 
+    border-right:10px solid #a1a4a7;
+    margin-left: -10px;
+}
